# VersaTerm

software/: .gitignore  CMakeLists.txt
software/src/: CMakeLists.txt  config.c  device.c  device.h  framebuf.c  framebuf_dvi.c  key.c  key.h  keyboard_ps2.c  led.c  led.h  main.c  pins.h  serial.c  serial.h  serial_cdc.c  serial_cdc.h  serial_uart.c  serial_uart.h  sound.c
software/src/boards/: custom_dvi_pin_configs.h
software/src/boards/extdisp/: VersaTerm.uf2  board_def.h  device.c  extdisp_program.h  serial_uart_pio.c  uart_pico.pio  uart_pico.pio.h
software/src/boards/versaterm/: board_def.h
